--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "linestream",
+  "name": "linerstream",
   "version": "0.0.0",
   "description": "Split a readable stream by newline characters",
   "main": "index.js",
