--- a/package.json
+++ b/package.json
@@ -9,15 +9,29 @@
   "scripts": {
     "test": "make test"
   },
-  "author": {
-    "name": "Noah Issaacson",
-    "email": "noah+npmjs@nisaacson.com",
-    "url": "https://github.com/nisaacson"
-  },
+  "author": "Noah Issaacson <noah+npmjs@nisaacson.com> (https://github.com/nisaacson)",
   "license": "ISC",
   "devDependencies": {
     "chai": "~1.8.1",
     "mocha": "~1.16.2",
     "sinon": "~1.7.3"
-  }
+  },
+  "dependencies": {
+    "chai": "~1.8.1",
+    "sinon": "~1.7.3"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/nisaacson/linerstream.git"
+  },
+  "keywords": [
+    "stream",
+    "line",
+    "split",
+    "newline"
+  ],
+  "bugs": {
+    "url": "https://github.com/nisaacson/linerstream/issues"
+  },
+  "homepage": "https://github.com/nisaacson/linerstream"
 }
