--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "linerstream",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Split a readable stream by newline characters",
   "main": "index.js",
   "directories": {
@@ -16,8 +16,7 @@
     "mocha": "~1.16.2",
     "sinon": "~1.7.3"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "repository": {
     "type": "git",
     "url": "git://github.com/nisaacson/linerstream.git"
